<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:padding="16dp">


        <ImageView
            android:id="@+id/close_button"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:clickable="true"
            android:contentDescription="Close"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_mood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/mood_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mood_spinner_container"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_background"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_mood">

            <Spinner
                android:id="@+id/emotion_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/icon_reason"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/baseline_edit_note_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/title_description"/>

        <TextView
            android:id="@+id/title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="Add a Note"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mood_spinner_container" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textarea_background"
            android:gravity="top"
            android:hint="Explain why you feel this way...."
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:minLines="1"
            android:maxLines="5"
            android:scrollHorizontally="false"
            android:padding="8dp"
            android:maxHeight="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_description" />

        <ImageView
            android:id="@+id/icon_camera"
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="@id/camera_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/camera_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:text="Add a Picture"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_input"/>

        <HorizontalScrollView
            android:id="@+id/images_scroll_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_text">

            <LinearLayout
                android:id="@+id/images_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </HorizontalScrollView>

        <Button
            android:id="@+id/camera_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:text="Tap to Select Photo..."
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/images_scroll_view" />

        <ImageView
            android:id="@+id/icon_group"
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_groups_24"
            app:layout_constraintBottom_toBottomOf="@id/title_social_situation"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_social_situation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/social_situation"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/social_situation_container"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/spinner_background"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_social_situation">

            <Spinner
                android:id="@+id/social_situation_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Switch
            android:id="@+id/trigger_warning_checkbox"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="36dp"
            android:text="Make Mood Private"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/social_situation_container" />

        <Switch
            android:id="@+id/attach_location_checkbox"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginTop="4dp"
            android:text="Attach Your Location"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trigger_warning_checkbox" />

        <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attach_location_checkbox" />

        <!-- Add Mood Button -->
        <Button
            android:id="@+id/add_mood_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:text="Post"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_container" />

        <TextView
            android:id="@+id/description_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="0 / 200"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/description_input"
            app:layout_constraintTop_toBottomOf="@id/description_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>